src/test/deca/context/valid/assign_mult_cont_01.deca
// Description:
//    Programme pour tester les expressions dans inst
//
// Resultats:
//
// Historique:
//    cree le 04/01/2023

{
   int a;
   int x;
   x = a = 2;
}