src/test/deca/context/invalid/init_undef_value.deca
// Description:
//    Initialisation avec une valeur indéfinie.
//
// Resultats:
//      Ligne 11: Initialization impossible with undefined value
//
// Historique:
//    cree le 01/01/2023

{
    int x = y;
}
